@@ -9,42 +9,47 @@ from paste.util.template import paste_script_template_renderer
 
 from pyramid.scripting import get_root
 
-class StarterProjectTemplate(Template):
+class PyramidTemplate(Template):
+    def pre(self, command, output_dir, vars): # pragma: no cover
+        vars['random_string'] = os.urandom(20).encode('hex')
+        return Template.pre(self, command, output_dir, vars)
+
+class StarterProjectTemplate(PyramidTemplate):
     _template_dir = 'paster_templates/starter'
     summary = 'pyramid starter project'
     template_renderer = staticmethod(paste_script_template_renderer)
 
-class StarterZCMLProjectTemplate(Template):
+class StarterZCMLProjectTemplate(PyramidTemplate):
     _template_dir = 'paster_templates/starter_zcml'
     summary = 'pyramid starter project (ZCML)'
     template_renderer = staticmethod(paste_script_template_renderer)
 
-class ZODBProjectTemplate(Template):
+class ZODBProjectTemplate(PyramidTemplate):
     _template_dir = 'paster_templates/zodb'
     summary = 'pyramid ZODB starter project'
     template_renderer = staticmethod(paste_script_template_renderer)
 
-class RoutesAlchemyProjectTemplate(Template):
+class RoutesAlchemyProjectTemplate(PyramidTemplate):
     _template_dir = 'paster_templates/routesalchemy'
     summary = 'pyramid SQLAlchemy project using Routes (no traversal)'
     template_renderer = staticmethod(paste_script_template_renderer)
 
-class AlchemyProjectTemplate(Template):
+class AlchemyProjectTemplate(PyramidTemplate):
     _template_dir = 'paster_templates/alchemy'
     summary = 'pyramid SQLAlchemy project using traversal'
     template_renderer = staticmethod(paste_script_template_renderer)
 
-class PylonsBasicProjectTemplate(Template):
+class PylonsBasicProjectTemplate(PyramidTemplate):
     _template_dir = 'paster_templates/pylons_basic'
     summary = 'Pylons basic project'
     template_renderer = staticmethod(paste_script_template_renderer)
 
-class PylonsMinimalProjectTemplate(Template):
+class PylonsMinimalProjectTemplate(PyramidTemplate):
     _template_dir = 'paster_templates/pylons_minimal'
     summary = 'Pylons minimal project'
     template_renderer = staticmethod(paste_script_template_renderer)
 
-class PylonsSQLAlchemyProjectTemplate(Template):
+class PylonsSQLAlchemyProjectTemplate(PyramidTemplate):
     _template_dir = 'paster_templates/pylons_sqla'
     summary = 'Pylons SQLAlchemy project'
     template_renderer = staticmethod(paste_script_template_renderer)
